# Interactive_planning_and_sensing

./: README.md
src/: CMakeLists.txt
src/auto_vehicle/: CMakeLists.txt
src/auto_vehicle/include/auto_vehicle/: auto_vehicle.hpp  tasks.hpp
src/auto_vehicle/src/: auto_vehicle.cpp  tasks.cpp
src/auto_vehicle/test/: test_cbba_newlib.cpp  test_info_driven.cpp  test_ipas_decentralized.cpp  test_optimality_analysis.cpp  test_threshold_analysis.cpp
src/cbba/: CMakeLists.txt
src/cbba/include/cbba/: cbba_agent.hpp  cbba_task.hpp
src/cbba/src/: cbba_agent.cpp  cbba_task.cpp
src/cbba/test/: test_Kclosest.cpp  test_cbba.cpp  test_map.cpp  test_path_length.cpp  test_reward_cbba.cpp  test_syn.cpp  test_tasks.cpp
src/cbga/: CMakeLists.txt
src/cbga/include/cbga/: cbga_task.hpp
src/cbga/src/: cbga_agent.cpp  cbga_task.cpp
src/cbga/test/: test_cbga.cpp  test_cbga_cbta.cpp
src/cbta/: CMakeLists.txt
src/cbta/src/: hcost_interface.cpp
src/cbta/test/: test_cbba_cbta.cpp  test_cbta.cpp  test_lifted_graph.cpp  test_path_length_cbta.cpp  test_syn_cbta.cpp
src/config/: agent.ini  map.ini  sensor-Bayesian.ini  task.ini  true_map.ini
src/config/map_uncertain/10*10map/: agent.ini  map.ini  task.ini  true_map.ini
src/config/map_uncertain/20*20map/: BayesianResults.json  agent.ini  bayesian-accurancy copy.ini  map.ini  sensor-Bayesian.ini  sensor-IPAS.ini  task.ini  true_map.ini
src/config/map_uncertain/30*30map/: BayesianResults.json  agent.ini  sensor-Bayesian.ini  sensor-IPAS.ini  task.ini  true_map.ini
src/config/map_uncertain/30*30map_new/: agent.ini  true_map.ini
src/config/map_uncertain/30*30simple_case2/: agent.ini  map.ini  task.ini  true_map.ini
src/config/map_uncertain/30*30simple_map/: map.ini  true_map.ini
src/config/map_uncertain/4*4map/: agent.ini  map.ini  task.ini  true_map.ini
src/config/map_uncertain/5*5map/: map.ini  task.ini
src/config/map_uncertain/5*5map_case2/: agent.ini  map.ini  task.ini  true_map.ini
src/config/map_uncertain/search_rescue/: BayesianResults.json  agent.ini  sensor-IPAS.ini
src/config/map_uncertain/search_rescue_new_comm/: agent.ini  map.ini  sensor-info.ini  task.ini
src/demo/: CMakeLists.txt  bayesian_opt_ipas_lcm.py  cbba_demo.cpp  info_driven_demo.cpp  ipas_bayesian_demo.cpp  ipas_demo.cpp  ipas_syn_demo.cpp  syn_demo.cpp  vis_ipas_lcm.py  vis_map_demo.cpp
src/gplib/: CMakeLists.txt
src/gplib/include/gplib/: gaussian_process.hpp  gaussian_process_classification.hpp  kernel.hpp  log_likelihood.hpp  log_likelihood_classification.hpp  rbf_kernel.hpp
src/gplib/src/: gaussian_process.cpp  gaussian_process_classification.cpp  log_likelihood_classification.cpp  rbf_kernel.cpp
src/gplib/test/: test_bayesian_ipas.cpp  test_bayesian_simulation.cpp  test_calculate_ig.cpp  test_gpc.cpp  test_gpc_ig.cpp  test_gpc_sensors.cpp  test_hyperparameters_training.cpp  test_ipas_rSensors.cpp  test_predict_ig.cpp
src/gplib/test/python/: analysis_bayesian.py  bayesian_lib.py  bayesian_opt_test.py  bayesian_opt_util.py  comparison.py  gp_map_vis.py  test_GPMap.py  test_GP_hyperparams.py  test_L2_analysis.py  test_L2_cellsize_analysis.py  test_bayesian_VS_ipas.py  test_bayesian_ipas.py  test_bayesian_ipas1.py  test_bayesian_opt.py  test_bayesian_performance_analysis.py  test_cellsize_analysis.py  test_cellsize_fullmap.py  test_gp_ig.py  test_gpc.py  test_occ_map.py  test_occ_sensor.py  test_training_data.py
src/gplib/test/python/data_L2_torlerance/: bayes_opt_data_20.cvs  bayes_opt_data_40.cvs  bayes_opt_data_5.cvs
src/gplib/test/python/data_correct_maxIG/: bayes_opt_data_10.cvs  bayes_opt_data_10_sp.cvs  bayes_opt_data_15.cvs  bayes_opt_data_25.cvs  bayes_opt_data_30.cvs  bayes_opt_data_35.cvs
src/graph/: graph.hpp
src/graph/algorithms/: astar.hpp
src/graph/details/: graph_impl.hpp
src/lcmtypes/: bayesian_data.lcm  distribution_data.lcm  graph_data.lcm  random_graph_data.lcm
src/lcmtypes/c/lcmtypes/: bayesian_data_bayesian_flag.c  bayesian_data_nzig_data.c  bayesian_data_nzig_data.h  bayesian_data_probability_data.c  bayesian_data_training_data.c  bayesian_data_training_data.h  bayesian_data_training_pair.c  bayesian_data_training_pair.h  distribution_data_path_dist.c  distribution_data_path_dist.h  distribution_data_paths_dist.c  distribution_data_sample.c  graph_data_bayesian_opt_data.c  graph_data_entropy_path_trend_data.c  graph_data_entropy_paths_trend_data.c  graph_data_entropy_paths_trend_data.h  graph_data_entropy_trend_data.c  graph_data_local_hspts_data.c  graph_data_local_hspts_data.h  graph_data_map_data.c  graph_data_path_data.c  graph_data_path_data.h  graph_data_paths_data.c  graph_data_paths_data.h  graph_data_prediction_data.c  graph_data_vertex_data.c  (+11 more)
src/lcmtypes/random_data/: agent_data.hpp  agents_data.hpp  task_data.hpp  tasks_data.hpp
src/lcmtypes/vis_data/: agent.hpp  agents_data.hpp  graph_data.hpp  path_data.hpp  sensors_data.hpp  vertex.hpp
src/ltl/: CMakeLists.txt
src/ltl/include/ltl/: buchi_automaton.hpp  cell_label.hpp  product_automaton.hpp
src/ltl/test/: test_buchi.cpp  test_cosafe.cpp  test_multi_area.cpp  test_product.cpp
src/map/: CMakeLists.txt
src/map/include/map/: common_types.hpp  grid_cell_impl.hpp  square_grid.hpp
src/map/src/: square_grid.cpp
src/map/test/: test_data_analysis.cpp  test_grid_map.cpp  test_ig_standard.cpp  test_ipas_cbba.cpp  test_ipas_simulation.cpp  test_random_map_availability.cpp  test_threshold_opt.cpp  test_uncertain_grid_map.cpp
src/python_vis/: IPAS_VS_IG.py  dimension_analysis.py  dimension_analysis_vis.py  graph_vis.py  graph_vis_sensors.py  num_tasks_analysis.py  optimality_analysis.py  threshold_analysis.py  vis.py
src/python_vis/search_rescue_IPAS/: Entropy_trend.cvs  Range_trend.cvs
src/task_assignment/: CMakeLists.txt  cbba.hpp  cbba_impl.hpp
src/vehicle/: CMakeLists.txt  agent.hpp  agent_impl.hpp  auto_team.hpp  auto_team_impl.hpp
src/vis/: CMakeLists.txt
src/vis/include/vis/: graph_vis.hpp  graph_vis_lcm.hpp  vis_utils.hpp
src/vis/src/: graph_vis.cpp  graph_vis_lcm.cpp
src/vis/test/: test_uncertain_map_vis.cpp
(+63 files in other folders)
